[package]
name = "log_structure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
clap_derive = { version = "4.5.3" }
log = "0.4.21"
